--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.main.allow-circular-references=true
