--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'com.google.googlejavaformat:google-java-format:1.16.0'
+    implementation 'org.springframework:spring-context-support'
 
     implementation 'org.flywaydb:flyway-core:8.4.4'
     implementation 'org.flywaydb:flyway-mysql:8.4.4'
